--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.6.*|6.*|7.*",
+        "illuminate/support": "^5.6|^6|^7",
         "kitetail/zttp": "^0.3.0"
     },
     "autoload": {
